# NewsMonitor

./: Dockerfile  README.md  compose.yml  example.env  makefile  pyproject.toml  ruff.toml
config/: categories.yaml  settings.py
config/grafana/dashboards/: dashboards.yaml  news_analytics.json
config/grafana/datasources/: clickhouse.yaml
dags/: classification.py  news_collection.py
plugins/common/: clickhouse_utils.py  clients.py  minio_utils.py  normalizers.py  utils.py
plugins/functions/: __init__.py  news_fetchers.py  processing_utils.py
plugins/operators/: __init__.py  base.py  hf_classifier_operator.py  text_preprocessing_operator.py
scripts/: clickhouse-init.sql
